docs: :memo: add docs for CRUD endpoints
