# handler/showOpening.go
@@ -7,6 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+// @Description Show a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id path int true "Opening ID"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening/:id [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 	if id == "" {
@@ -18,7 +28,7 @@ func ShowOpeningHandler(ctx *gin.Context) {
 	opening := schema.Opening{}
 	if err := db.First(&opening, id).Error; err != nil {
 		logger.Errorf("show opening error: %v", err.Error())
-		sendError(ctx, http.StatusInternalServerError, err.Error())
+		sendError(ctx, http.StatusNotFound, err.Error())
 		return
 	}
 
